--- a/app/src/main/res/drawable/item_background_square.xml
+++ b/app/src/main/res/drawable/item_background_square.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E0E0E0"/>
-    <corners android:radius="0dp"/>
+    <solid android:color="#2196F3"/>
+    <corners android:radius="20sp"/>
     <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
 </shape>
