--- a/app/src/main/res/layout/activity_comparison.xml
+++ b/app/src/main/res/layout/activity_comparison.xml
@@ -5,14 +5,16 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@color/background_color"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_marginTop="60sp"
+    >
 
     <TextView
         android:id="@+id/question_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/question"
-        android:textSize="20sp"
+        android:textSize="32sp"
         android:textStyle="bold"
         android:padding="16dp"
         android:textColor="@color/text_primary"
@@ -28,46 +30,54 @@
         <Button
             android:id="@+id/answer1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
+            android:layout_height="100dp"
             android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
             android:text="Answer 1"
-            android:textColor="@color/text_secondary"
             android:backgroundTint="@color/accent_color"
-            android:gravity="center" />
+            android:textColor="@color/text_secondary"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            />
 
         <Button
             android:id="@+id/answer2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:text="Answer 2"
             android:textColor="@color/text_secondary"
             android:backgroundTint="@color/accent_color"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_margin="10dp"
+            />
 
         <Button
             android:id="@+id/answer3"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:text="Answer 3"
             android:textColor="@color/text_secondary"
             android:backgroundTint="@color/accent_color"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_margin="10dp"
+            />
 
         <Button
             android:id="@+id/answer4"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:text="Answer 4"
             android:textColor="@color/text_secondary"
             android:backgroundTint="@color/accent_color"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_margin="10dp"
+            />
     </GridLayout>
 
     <Button
@@ -75,21 +85,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/retry"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/accent_color"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:padding="12dp"
-        android:layout_gravity="center"
-        android:fontFamily="sans-serif-medium"
-        android:background="@drawable/rounded_button"
-        android:visibility="gone" />
-
-    <Button
-        android:id="@+id/reset_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/reset"
         android:textColor="@color/white"
         android:backgroundTint="@color/accent_color"
         android:layout_marginTop="8dp"
