add rank screen

--- a/app/src/main/res/layout/activity_learn_math.xml
+++ b/app/src/main/res/layout/activity_learn_math.xml
@@ -209,6 +209,7 @@
             android:background="@drawable/item_background_square"
             android:gravity="center"
             android:orientation="vertical"
+            android:id="@+id/rank_button"
             android:padding="8dp">
 
             <ImageView
