--- a/app/src/main/res/layout/activity_learn_math.xml
+++ b/app/src/main/res/layout/activity_learn_math.xml
@@ -198,7 +198,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/settings"
+                android:text="@string/test"
                 android:textColor="@color/text_color"
                 android:textSize="18sp" />
         </LinearLayout>
